v1, lobbyblocks